# rustdoc-prettier

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
fixtures/clippy_issue_14274/: Cargo.toml
fixtures/clippy_issue_14274/src/: main.expected.rs  main.rs
fixtures/globstar/: Cargo.toml
fixtures/globstar/src/: lib.rs
fixtures/globstar/src/needs_formatting/: mod.rs
src/: main.rs  resolve_project_file.rs
tests/: ci.rs  clippy.rs  dogfood.rs  globstar.rs  nonexistent_file.rs  rustfmt_toml_in_parent_directory.rs  util.rs  z_race.rs
