[package]
name = "rustdoc-prettier"
version = "0.2.0"
authors = ["Samuel Moelius <sam@moeli.us>"]
description = "Format //! and /// comments with prettier"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/smoelius/rustdoc-prettier"

[dependencies]
assert_cmd = "2.0"
anyhow = { version = "1.0", features = ["backtrace"] }
ctrlc = "3.4"
glob = "0.3"
itertools = "0.13"
rewriter = "0.1"
tempfile = "3.13"
toml = "0.8"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
format-collect = "allow"
struct-field-names = "allow"
