[package]
name = "rustdoc-prettier"
version = "0.4.0"
authors = ["Samuel Moelius <sam@moeli.us>"]
description = "Format //! and /// comments with prettier"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/smoelius/rustdoc-prettier"

[dependencies]
assert_cmd = "2.0"
anyhow = { version = "1.0", features = ["backtrace"] }
ctrlc = "3.4"
glob = "0.3"
itertools = "0.14"
rewriter = "0.2"
toml = "0.8"

[dev-dependencies]
ctor = "0.4"
predicates = "3.0"
similar-asserts = "1.7"
tempfile = "3.20"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
format-collect = "allow"
missing-errors-doc = "allow"
struct-field-names = "allow"

[[workspace.metadata.dylint.libraries]]
git = "https://github.com/trailofbits/dylint"
pattern = [
    "examples/general",
    "examples/supplementary",
    "examples/restriction/inconsistent_qualification",
    "examples/restriction/misleading_variable_name",
]
