[package]
name = "rustdoc-prettier"
version = "0.7.1"
authors = ["Samuel Moelius <sam@moeli.us>"]
description = "Format //! and /// comments with prettier"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/smoelius/rustdoc-prettier"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
ctrlc = "3.5"
elaborate = "0.1.0"
glob = "0.3"
itertools = "0.14"
rewriter = "0.2"
toml = "0.9"

[dev-dependencies]
assert_cmd = "2.1"
ctor = "0.6"
predicates = "3.1"
similar-asserts = "1.7"
tempfile = "3.23"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
format-collect = "allow"
map-unwrap-or = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
struct-field-names = "allow"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(dylint_lib, values(any()))"]

[[workspace.metadata.dylint.libraries]]
git = "https://github.com/trailofbits/dylint"
pattern = [
    "examples/general",
    "examples/supplementary",
    "examples/restriction/inconsistent_qualification",
    "examples/restriction/misleading_variable_name",
]
